Fix: destructive a11y contrast issues (#408)

--- a/apps/www/src/styles/globals.css
+++ b/apps/www/src/styles/globals.css
@@ -29,7 +29,7 @@
 		--accent: 240 4.8% 95.9%;
 		--accent-foreground: 240 5.9% 10%;
 
-		--destructive: 0 84.2% 60.2%;
+		--destructive: 0 72.22% 50.59%;
 		--destructive-foreground: 0 0% 98%;
 
 		--ring: 240 5% 64.9%;
